@@ -63,6 +63,10 @@ ENDIF(ENABLE_PROFILING)
 ADD_LIBRARY(${OPENJPEG_LIBRARY_NAME} ${OPENJPEG_SRCS})
 SET_TARGET_PROPERTIES(${OPENJPEG_LIBRARY_NAME} PROPERTIES
 	${OPENJPEG_LIBRARY_PROPERTIES})
+IF(UNIX)
+  TARGET_LINK_LIBRARIES(${OPENJPEG_LIBRARY_NAME} m)
+ENDIF(UNIX)
+
 
 # Install library
 INSTALL(TARGETS ${OPENJPEG_LIBRARY_NAME}
