@@ -5,6 +5,9 @@ What's New for OpenJPEG
 ! : changed
 + : added
 
+August 2nd, 2008
+* [Mathieu Malaterre] remove INLINE from forward decl. Fix CMakeLists.txt for UNIX platforms
+
 August 1st, 2008
 - [antonin] removed t1_generate_luts.c, useless in version 2.
 ! [antonin] updated XCode project file for mac users.
